tests/error/new_prim.gw
// [contains] cannot instantiate/(new) primitive type
new int;
